Fix: Made slight spacing changes. Changed text of manual onboarding

--- a/src/sass/variantcss/_verification.scss
+++ b/src/sass/variantcss/_verification.scss
@@ -20,7 +20,7 @@
 .welcome-label2{
   font-size: 30px;
   font-weight: normal;
-
+  line-height: 1.25;
 }
 
 .welcome-label3{
@@ -74,8 +74,8 @@
 
 .template-button-container{
   width: 100%;
-  height: 150px;
-  margin: 15vh 0px 0px -15px;
+  height: 110px;
+  margin: 2vh 0px 0px -15px;
 }
 
 .template-button{
@@ -99,7 +99,7 @@
 }
 
 .template-progress-msg{
-  font-size: 18px;
+  font-size: 17px;
   //margin: 36px 0 0 -18px;
   margin: 36px 0 0 0;
   line-height: 1.3;
